--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
 <body>
     <h1>Juan Pablo</h1>
     <section> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium odit voluptatum itaque dolorum rerum tempore inventore totam omnis doloribus harum enim exercitationem vitae tenetur laborum laudantium dicta, voluptas nesciunt quidem.</section>
+    <table class>
+    <tr>
+    <td1>EQUIPO 1</td1>
+    <td2>EQUIPO 2</td2>
+    <td3>EQUIPO 3</td3>
+
+    </tr>
+    <tr>
+    <td>CALI</td>
+    <td>NACIONAL</td>
+    <td>MILLONARIOS</td>
+    </tr>
+    </table>
 </body>
 </html>
