cambios en html y css

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css.css">
-    <title>Document</title>
+    <title>Equipos</title>
 </head>
 <body>
     <h1>Juan Pablo</h1>
     <section> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium odit voluptatum itaque dolorum rerum tempore inventore totam omnis doloribus harum enim exercitationem vitae tenetur laborum laudantium dicta, voluptas nesciunt quidem.</section>
     <table class>
     <tr>
-    <td1>EQUIPO 1</td1>
-    <td2>EQUIPO 2</td2>
-    <td3>EQUIPO 3</td3>
+    <td>EQUIPO 1</td>
+    <td>EQUIPO 2</td>
+    <td>EQUIPO 3</td>
 
     </tr>
     <tr>
